<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baniya.pintooaggarwal.bookbuyselling.SellYourItemActivity"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:title="Add your Book Details"
            android:layout_height="wrap_content"
            android:background="@color/orange">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take photo"
            android:textSize="16sp"
            android:textColor="@color/orange"
            android:layout_marginBottom="16dp"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="104dp">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_photo"
                    android:layout_gravity="center_vertical"

                    android:src="@drawable/ic_photo_camera_black_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:id="@+id/image1"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image2"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image3"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image4"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/image5"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/image6"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image7"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image8"

                    android:layout_marginLeft="4dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone"
                    />




            </LinearLayout>

        </HorizontalScrollView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/price" />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:text="Category"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/category"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Name" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/mobile" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Enter your Area and Pincode (Krishna Nagar ,110051)" />
        </android.support.design.widget.TextInputLayout>




        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"

            android:background="@drawable/roundedcorners"
            />

      <!--  <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ad_sell"
            android:layout_below="@+id/submit"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6864838753851425/1613272378">
        </com.google.android.gms.ads.AdView>-->

    </LinearLayout>

    </ScrollView>




</RelativeLayout>
